New bar graph and flask beginnings

--- a/Final_Movie_Project.ipynb
+++ b/Final_Movie_Project.ipynb
@@ -210,7 +210,9 @@
   },
   {
    "source": [
-    "## Class Label Pie Chart"
+    "## Figure 1: Class Label Pie Chart\n",
+    "\n",
+    "Figure 1 shows the distribution of different class labels throughout our dataset as shown by a pie chart."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -251,14 +253,16 @@
    "source": [
     "## Initial EDA on \"film_data.csv\"\n",
     "\n",
-    "### Pi Chart of Class Labels"
+    "### Pie Chart of Class Labels"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## Histogram of Film Genres\n",
+    "## Figure 2: Histogram of Film Genres\n",
+    "\n",
+    "Figure 2 shows the different amounts of different film genres within our dataset.\n",
     "\n",
     "The \"genre\" column of data is a string that contains one or more genre names. This would not be handled well by our plot utils. Therefore, we searched the string for a substring, genre name in genre_lst, and if the substring was found, we appended it to a list. "
    ],
@@ -299,7 +303,9 @@
   },
   {
    "source": [
-    "## Histogram of Film Production Companies"
+    "## Figure 3: Histogram of Film Production Companies\n",
+    "\n",
+    "Figure 3 is a histogram that represents the amount of times the top 20 production companies are represented in the dataset."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -350,7 +356,9 @@
   },
   {
    "source": [
-    "## Scatter Plot that shows the Average Rating Compared to the Number of Ratings"
+    "## Figure 4: Scatter Plot that shows the Average Rating Compared to the Number of Ratings\n",
+    "\n",
+    "Figure 4 is a scatter plot that plots the average rating of a movie to against the total number of ratings for that movie. The values beneath 6 are very sparse because we removed all movies with ratings below six that were not nominated or did not win an oscar. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -375,6 +383,15 @@
    "source": [
     "plot_utils.make_scatter_plot(film_data, \"avg_vote\", \"votes\", \"Average Rating Compared to Number of Ratings\", \"Average Rating\", \"Number of Votes\")"
    ]
+  },
+  {
+   "source": [
+    "## Figure 5: Scatter Plot Comparing Amount of User Reviews to Amount of Reviews from Critics\n",
+    "\n",
+    "Figure 5 plots the amount of user reviews on the x-axis and the amount of critic reviews on the y-axis. It also includes a line for the covariance between these two lists of values. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -456,6 +473,15 @@
    ]
   },
   {
+   "source": [
+    "## Figure 6: Pie Chart of y_test values of the Naive Bayes Classifier\n",
+    "\n",
+    "Figure 6 shows the "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -490,7 +516,8 @@
     "nb_predicted_freqs = list(naive_bayes_predicted_freq_dict.values())\n",
     "\n",
     "plot_utils.make_pie_chart_with_comp(nb_test_names, nb_test_freqs, \"Test Naive Bayes Class Labels\")\n",
-    "plot_utils.make_pie_chart_with_comp(nb_predicted_names, nb_predicted_freqs, \"Predicted Naive Bayes Class Labels\")"
+    "plot_utils.make_pie_chart_with_comp(nb_predicted_names, nb_predicted_freqs, \"Predicted Naive Bayes Class Labels\")\n",
+    "\n"
    ]
   }
  ]
