no naive bayes labels

--- a/Final_Movie_Project.ipynb
+++ b/Final_Movie_Project.ipynb
@@ -631,7 +631,7 @@
     "lst2_counts = list(predicted_dict.values())\n",
     "\n",
     "\n",
-    "plot_utils.make_multiple_bar_graphs(lst1_vals, lst2_vals, lst1_counts, lst2_counts, \"Predicted and y_test values in NaiveBayes\", \"Class Lable Prediction\", \"Amounts\", \"y_test\", \"predicted\")\n"
+    "plot_utils.make_multiple_bar_graphs(lst1_vals, lst2_vals, lst1_counts, lst2_counts, \"Predicted and y_test values from Decision Tree\", \"Class Lable Prediction\", \"Amounts\", \"y_test\", \"predicted\")\n"
    ]
   },
   {
